レスポンシブの修正

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <link rel="stylesheet" href="css/responsive.css"/>
         <link rel="stylesheet" href="css/architecture.css" />
     </head>
+    <style>
+        @media (max-width: 991px) {
+            .navbar {
+                display: none;
+            }
+        }
+    </style>
     <body class="custom-cursor overflow-x-hidden" data-mobile-nav-style="classic">
         <!-- start cursor -->
         <div class="cursor-page-inner">
@@ -26,23 +33,18 @@
         </div>
         <!-- end cursor -->
         <!-- start header -->
-        <header> 
+        <header>
             <!-- start navigation -->
             <nav class="navbar navbar-expand-lg header-transparent bg-transparent disable-fixed">
                 <div class="container-fluid">
-                    <div class="col-auto col-lg-2 me-lg-0 me-auto d-none d-lg-flex"> 
+                    <div class="col-auto col-lg-2 me-lg-0 me-auto d-none d-lg-flex">
                         <div class="header-icon">
                             <div class="header-social-icon icon social-text-style-01">
                                 <a href="https://apps.apple.com/jp/developer/yu-hiraoka/id1750657696" target="_blank"><i></i>My Apple Store</a>
-                                <a  href="https://apps.apple.com/jp/app/handy-stopwatch/id6504489579" target="_blank">Handy Stopwatch</a>
+                                <a href="https://apps.apple.com/jp/app/handy-stopwatch/id6504489579" target="_blank">Handy Stopwatch</a>
                                 <a href="https://apps.apple.com/jp/app/%E9%9F%B3%E3%82%AF%E3%83%AD%E3%83%83%E3%82%AF/id6504010049" target="_blank">音クロック</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-auto">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="images/icon.png" class="mobile-logo" style="scale: 1.5">
-                        </a>
                     </div>
                 </div>
             </nav>
