--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                                         <div class="position-relative gallery-image bg-white overflow-hidden">
                                             <img src="images/handy_stopwatch_1_785*785.png" alt="" />
                                             <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
-                                                <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-dark-gray">
-                                                    <i class="feather icon-feather-search text-white icon-small"></i>
-                                                </div>
+<!--                                                <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-dark-gray">-->
+<!--                                                    <i class="feather icon-feather-search text-white icon-small"></i>-->
+<!--                                                </div>-->
                                             </div>
                                         </div>
                                     </a>
@@ -152,9 +152,9 @@
                                         <div class="position-relative gallery-image bg-white overflow-hidden">
                                             <img src="images/handy_stopwatch_2_785*785.png" alt="" />
                                             <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
-                                                <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-dark-gray">
-                                                    <i class="feather icon-feather-search text-white icon-small"></i>
-                                                </div>
+<!--                                                <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-dark-gray">-->
+<!--                                                    <i class="feather icon-feather-search text-white icon-small"></i>-->
+<!--                                                </div>-->
                                             </div>
                                         </div>
                                     </a>
@@ -168,9 +168,9 @@
                                         <div class="position-relative gallery-image bg-white overflow-hidden">
                                             <img src="images/handy_stopwatch_3_785*785.png" alt="" />
                                             <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
-                                                <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-dark-gray">
-                                                    <i class="feather icon-feather-search text-white icon-small"></i>
-                                                </div>
+<!--                                                <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-dark-gray">-->
+<!--                                                    <i class="feather icon-feather-search text-white icon-small"></i>-->
+<!--                                                </div>-->
                                             </div>
                                         </div>
                                     </a>
